tests/expected/spec/ambiguity/001_ts_assertion_vs_jsx_simple.txt
{
  "type": "Program",
  "start": 80,
  "end": 109,
  "sourceType": "script",
  "hashbang": null,
  "body": [
    {
      "type": "VariableDeclaration",
      "start": 80,
      "end": 102,
      "kind": "const",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 86,
          "end": 102,
          "id": {
            "type": "Identifier",
            "start": 86,
            "end": 91,
            "name": "value",
            "typeAnnotation": null,
            "optional": false          },
          "init": {
            "type": "JSXElement",
            "start": 94,
            "end": 102,
            "openingElement": {
              "type": "JSXOpeningElement",
              "start": 94,
              "end": 102,
              "name": {
                "type": "JSXIdentifier",
                "start": 95,
                "end": 101,
                "name": "string"
              },
              "attributes": [],
              "selfClosing": false,
              "typeArguments": null
            },
            "children": [
              {
                "type": "JSXText",
                "start": 102,
                "end": 109,
                "value": "input;\n",
                "raw": "input;\n"
              }
            ],
            "closingElement": {
              "type": "JSXClosingElement",
              "start": 109,
              "end": 109,
              "name": null
            }
          }        }
      ]    }
  ],
  "comments": [
    {
      "type": "Line",
      "start": 0,
      "end": 79,
      "value": " TS `<Type>expr` assertion, not JSX, because the angle bracket starts a cast."
    }
  ],
  "errors": [
    {
      "code": "K2002",
      "severity": "error",
      "message": "Expected '<', got end of input",
      "line": 3,
      "column": 1,
      "offset": 109
    },
    {
      "code": "K2002",
      "severity": "error",
      "message": "Expected '/', got end of input",
      "line": 3,
      "column": 1,
      "offset": 109
    },
    {
      "code": "K2002",
      "severity": "error",
      "message": "Expected '>', got end of input",
      "line": 3,
      "column": 1,
      "offset": 109
    }
  ]
}
error[K2002]: Expected '<', got end of input
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/spec/ambiguity/001_ts_assertion_vs_jsx_simple.js:3:1
   |
 3 | 
   | ^
  = note: see TS1005

error[K2002]: Expected '/', got end of input
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/spec/ambiguity/001_ts_assertion_vs_jsx_simple.js:3:1
   |
 3 | 
   | ^
  = note: see TS1005

error[K2002]: Expected '>', got end of input
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/spec/ambiguity/001_ts_assertion_vs_jsx_simple.js:3:1
   |
 3 | 
   | ^
  = note: see TS1005

--- Statistics ---
Arena: used=37888B reserved=16777216B ratio=0%
Parse errors: 3
